add dictionary list, create, word list
