# src/Controller/API/Dictionary/DictionaryController.php
@@ -3,6 +3,9 @@
 namespace App\Controller\API\Dictionary;
 
 use App\Controller\API\AbstractAuthenticationBaseController;
+use App\Service\Dictionary\DictionaryListService;
+use App\Service\Dictionary\DictionaryService;
+use App\Service\Dictionary\DictionaryWithWordsService;
 use Symfony\Component\Routing\Annotation\Route;
 
 class DictionaryController extends AbstractAuthenticationBaseController
@@ -14,10 +17,50 @@ class DictionaryController extends AbstractAuthenticationBaseController
      *     methods={"GET"}
      *     )
      */
-    public function index()
+    public function index(DictionaryListService $dictionaryListService)
     {
-        return $this->json([
-            'user' => $this->getUser(),
-        ], 201);
+        $responseModel = $dictionaryListService->getResponseModel();
+
+        return $this->json(
+            $responseModel->getResponse(),
+            $responseModel->getStatusCode()
+        );
     }
+
+    /**
+     * @Route(
+     *     name="dictionary_create",
+     *     path="/dictionary",
+     *     methods={"POST"}
+     *     )
+     */
+    public function create(DictionaryService $dictionaryService)
+    {
+        $dictionaryService->setToCreate();
+        $responseModel = $dictionaryService->getResponseModel();
+
+        return $this->json(
+            $responseModel->getResponse(),
+            $responseModel->getStatusCode()
+        );
+    }
+
+    /**
+     * @Route(
+     *     name="dictionary_get",
+     *     path="/dictionary/{id}",
+     *     methods={"GET"}
+     *     )
+     */
+    public function getDictionary($id, DictionaryWithWordsService $dictionaryService)
+    {
+        $dictionaryService->setDictionaryId($id);
+        $responseModel = $dictionaryService->getResponseModel();
+
+        return $this->json(
+            $responseModel->getResponse(),
+            $responseModel->getStatusCode()
+        );
+    }
+
 }
